[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=1]
[ext_resource path="res://components/elements/styled/style_color_auto_remap.gd" type="Script" id=2]
[ext_resource path="res://components/popups/browser_warning_popup.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0.113725 )
shadow_size = 10
shadow_offset = Vector2( 0, 6 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.0588235, 0.2, 0.337255, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[node name="BrowserWarningPopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="BrowserWarningBG" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0627451, 0.113725, 0.784314 )

[node name="BrowserWarning" type="PopupDialog" parent="."]
unique_name_in_owner = true
self_modulate = Color( 0.0901961, 0.113725, 0.129412, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -125.0
margin_right = 325.0
margin_bottom = 75.0
rect_min_size = Vector2( 650, 200 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 35 )
popup_exclusive = true

[node name="Content" type="VBoxContainer" parent="BrowserWarning"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="BrowserWarning/Content"]
margin_right = 650.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
custom_styles/normal = SubResource( 8 )
text = "Browser compatibility warning"
align = 1
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="BrowserWarning/Content"]
margin_top = 28.0
margin_right = 650.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="BrowserWarning/Content/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="BrowserWarningLabel" type="Label" parent="BrowserWarning/Content/MarginContainer/Content"]
unique_name_in_owner = true
margin_right = 610.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "For the best experience using the Resoto User Interface, we recommend using Google Chrome instead of Firefox (detected).

Other browsers may cause compatibility issues and reduce functionality."
align = 1
autowrap = true

[node name="Spacer" type="Control" parent="BrowserWarning/Content/MarginContainer/Content"]
margin_top = 99.0
margin_right = 610.0
margin_bottom = 109.0
rect_min_size = Vector2( 0, 10 )

[node name="Buttons" type="HBoxContainer" parent="BrowserWarning/Content/MarginContainer/Content"]
margin_top = 119.0
margin_right = 610.0
margin_bottom = 151.0
custom_constants/separation = 20
alignment = 1

[node name="BrowserWarningConfirmButton" type="Button" parent="BrowserWarning/Content/MarginContainer/Content/Buttons"]
unique_name_in_owner = true
margin_left = 265.0
margin_right = 345.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 0 )
theme_type_variation = "ButtonFlat"
text = "Dismiss"

[node name="BrowserWarningTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="pressed" from="BrowserWarning/Content/MarginContainer/Content/Buttons/BrowserWarningConfirmButton" to="." method="_on_BrowserWarningConfirmButton_pressed"]
[connection signal="timeout" from="BrowserWarningTimer" to="." method="_on_BrowserWarningTimer_timeout"]
